--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   backend:
     build: ./backend
@@ -21,7 +19,7 @@ services:
       - redis
     networks:
       - proxy
-      - traefik-network
+      - home-network
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik-network"
@@ -38,7 +36,7 @@ services:
       - backend
     networks:
       - home-network
-      - traefik-network
+      - proxy
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=traefik-network"
@@ -62,8 +60,6 @@ networks:
   home-network:
     driver: bridge
   proxy:
-    external: true
-  traefik-network:
     external: true
 
 volumes:
