--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "traefik.docker.network=proxy"
       - "traefik.http.routers.home-api.rule=Host(`${DOMAIN:-home.zitek.cloud}`) && PathPrefix(`/api`)"
       - "traefik.http.routers.home-api.entrypoints=websecure"
-      - "traefik.http.routers.home-api.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.home-api.tls.certresolver=lehttp"
       - "traefik.http.services.home-api.loadbalancer.server.port=8000"
     restart: unless-stopped
 
