Set priority for Traefik routers in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
       - "traefik.http.routers.home-api.rule=Host(`${DOMAIN:-home.zitek.cloud}`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.home-api.priority=10" 
       - "traefik.http.routers.home-api.entrypoints=websecure"
       - "traefik.http.routers.home-api.tls.certresolver=lehttp"
       - "traefik.http.services.home-api.loadbalancer.server.port=8000"
@@ -41,6 +42,7 @@ services:
       - "traefik.enable=true"
       - "traefik.docker.network=proxy"
       - "traefik.http.routers.home.rule=Host(`${DOMAIN:-home.zitek.cloud}`)"
+      - "traefik.http.routers.home.priority=1" 
       - "traefik.http.routers.home.entrypoints=websecure"
       - "traefik.http.routers.home.tls.certresolver=lehttp"
       - "traefik.http.services.home.loadbalancer.server.port=80"
