Harden secret config and favicon proxy security

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 DOMAIN=home.zitek.cloud
 
 # Security
+# REQUIRED: generate a unique SECRET_KEY (>=32 chars). The placeholder below will fail validation until replaced.
 SECRET_KEY=change-this-to-a-random-secret-key-in-production
 
 # OAuth2 Configuration (Google OAuth2)
