docs(env): update CORS_ORIGINS comment to clarify usage format

--- a/.env.example
+++ b/.env.example
@@ -46,4 +46,5 @@ NEWS_API_KEY=
 # For production, set to your actual domain(s):
 # CORS_ORIGINS=https://home.example.com,https://www.home.example.com
 # Using '*' is NOT recommended and will default to localhost origins.
+# use: ["https://home.zitek.cloud", "https://localhost:3000"] format
 CORS_ORIGINS=
