Add LOG_LEVEL variable to .env.example

--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,7 @@ FRONTEND_URL=http://localhost:3000
 
 # Debug mode (set to false in production)
 DEBUG=false
+LOG_LEVEL=INFO
 
 # API Keys
 # Get free API key from: https://openweathermap.org/api
